--- a/pom.xml
+++ b/pom.xml
@@ -240,7 +240,7 @@
     <repositories>
         <repository>
             <id>java.net.m2</id>
-            <url>http://download.java.net/maven/2</url>
+            <url>https://download.java.net/maven/2</url>
             <layout>default</layout>
         </repository>
     </repositories>
